--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.12"
 pydantic = "^2.9.2"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
+faster-whisper = "^1.0.3"
+llvmlite = "^0.43.0"
+librosa = "^0.10.2.post1"
+soundfile = "^0.12.1"
 
 
 [build-system]
