--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,9 +47,13 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "recordrtc": "^5.6.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "vaul": "^0.9.4",
+    "waveform-data": "^4.5.0",
+    "web-audio-wave-recorder": "^1.0.15",
+    "webm-to-wav-converter": "^1.1.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
@@ -58,6 +62,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/recordrtc": "^5.6.14",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.8.0",
