--- a/.env.local
+++ b/.env.local
@@ -8,3 +8,4 @@ APP_SPA_PROXY_PORT='3000'
 APP_SPA_PROXY_URL='http://${APP_HTTP_HOST}:${APP_SPA_PROXY_PORT}'
 APP_SPA_FOLDER_ROOT='frontend'
 APP_SPA_PROXY_LAUNCH_CMD='bun dev --host --port ${APP_SPA_PROXY_PORT}'
+GEMINI_API_KEY='AIzaSyDLCSiHfY6fKNdcF9vL0w9V8rgmrNSr-VY'
