--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.445.0",
+    "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7",
     "recordrtc": "^5.6.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
